2010/08/23
    1. Respects softfail from bearerbox (ack_failed_tmp).
    2. Propagates message priority in submit_sm further to bearerbox in Msg struct.
    Thanks to Victor Luchitz for reporting.

2010/08/22
    Fixed bug reported by boooch@gmail.com as where authentication including system_type would always fail.

2010/08/19
    1) add support for message_payload TLV for deliver_sm packets. This TLV is used in case a smpp meta-flag "use_message_payload" is set.
    2) brings smppbox in conformity with SMPP v3.4 in regarding shedule_delivery_time and validiy_period fields in deliver_sm packets.
    3) if connected ESME requests delivery report for a submit_sm packet, smppbox will now also notify the ESME of SMSC failures, generated by the bearerbox.
    4) provides documentation updates.
    5) some minor improvements, including larger dict-size for acks.


2010/08/16
    Fixed ghost connections bug, where disconnected smppusers kept
    being visible as connected in bearerbox status page.

2010/08/11
    Filled in msg->sms.sms_type that was incorrectly left undefined.
    Thanks to Tomasz Konopka for reporting.

2010/08/02
    Added optional support for PAM authentication. See userguide.
    Added recognition of bearerbox acks for messages. If for
    some reason the message is acked negatively, open smppbox
    returns an error to the ESME and vice versa.
    Also an ESME-timeout can now be configured in smppbox.conf.
    Changes made by Rene Kluwen rene.kluwen@chimit.nl.

2010/08/01
    Added extra actual parameter because the dlr_find prototype
    in the Kannel sources has been changed.
    The smpp username (system-id) is relayed to bearerbox as
    billing information (msg->sms.account). This can be used in
    order to bill the reflected user.
    A legacy sqlbox patch is available that uses this information
    for pre-paid billing purposes.

2010/07/28
    Patch by Victor Luchitz to add tlv's to delivery reports.