@@ -1,3 +1,6 @@
+2010/09/15
+    Sending negative ack upon receiving invalid MO/DLR.
+
 2010/08/23
     1. Respects softfail from bearerbox (ack_failed_tmp).
     2. Propagates message priority in submit_sm further to bearerbox in Msg struct.
